# 2023_mystic_melody

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.c  music.cbp  musicStorage.db
assets/css/: Style.css  addSongToPlaylist.css  home.css  intro.css  signIn.css  signUp.css  uploadSong.css
lib/: shell.c
models/: listOfSong.c  listOfSong.h  songModel.c  songModel.h  userModel.c  userModel.h
page/: HomePage.c  HomePage.h  IntroPage.c  IntroPage.h  SignInPage.c  SignInPage.h  SignUpPage.c  SignUpPage.h
page/components/: addToPlaylist.c  addToPlaylist.h  explorerTab.c  explorerTab.h  myMusicTab.c  myMusicTab.h  myPlaylistTab.c  myPlaylistTab.h  playTab.c  playTab.h  playlistDetail.c  playlistDetail.h  updatePlaylist.c  updatePlaylist.h  uploadTab.c  uploadTab.h
query/: playlistQuery.c  playlistQuery.h  songQuery.c  songQuery.h  userQuery.c  userQuery.h
utils/: control.c  control.h  filter.c  filter.h  loadTemp.c  loadTemp.h  sys.c  sys.h  upload.c  upload.h
